# trickcal-manager

./: .gitignore  README.md  find.py  main.py  pyproject.toml  test_epica_detailed.py  test_epica_simulation.py  test_simple_hero.py  update.py
db/: master.db
src/dps/: action.py  action_manager.py  artifact.py  enums.py  hero.py  party.py  skill_conditions.py  spell.py  stat_utils.py  status.py  status_manager.py  upper_skill_manager.py
ui/: equip_window_1.py  equip_window_1.ui  hero_window.py  hero_window.ui  main_window.py  main_window.ui  page_equip_1.py  page_equip_1.ui  sidebar.py  sidebar.ui  style_account_settings.qss  style_hero_window.qss  style_page_equip_1.qss  style_sidebar.qss  wrapper.py
widgets/: icon_resource.qrc
widgets/dps/: action.py  action_manager.py  buff.py  effect.py  effect_manager.py  enums.py  event.py  hero.py  party.py  status.py  status_manager.py  step_function.py
widgets/style/: style_page_equip_1.qss  style_sidebar.qss
widgets/ui/: account_settings.py  account_settings.ui  combobox_editor.py  combobox_editor.ui  crayon_scrollarea.py  crayon_scrollarea.ui  crayon_stat_container.py  crayon_stat_container.ui  dps_graph_window.py  dps_graph_window.ui  dps_hero_cell.py  dps_hero_cell.ui  equip_dialog.py  equip_dialog.ui  hero_setting_dialog.py  hero_setting_dialog.ui  main_window.py  main_window.ui  page_crayon_1.py  page_crayon_1.ui  page_crayon_2.py  page_crayon_2.ui  page_crayon_abstract.py  page_crayon_abstract.ui  page_dps_1.py  page_dps_1.ui  page_equip_1.py  page_equip_1.ui  page_equip_2.py  page_equip_2.ui  page_equip_3.py  (+13 more)
(+88 files in other folders)
